# Shohoj-Niyog

./: .gitignore  Dockerfile  Procfile  README.md  build.sh  django-key.ppk  docker-compose.yml  main.py  pyproject.toml  req.txt  requirements-cpu.txt  requirements.txt  transcribe.py
agents/: ques_ans_gen.py  transcribe_answer.py  validate_answer.py
agents/candidate/: load_qa.py  save_response.py  transcribe_answer.py  validate_answer.py
agents/recruiter/: ques_ans_gen.py  save_to_db.py
backend/: manage.py  mongo.py  mydatabase
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_rename_phone_number_customuser_phone.py  0003_customuser_role.py  0004_alter_customuser_role.py  0005_alter_customuser_email.py  0006_alter_customuser_id.py  0007_customuser_company.py  0008_alter_customuser_company.py  0009_alter_customuser_company.py
backend/api/: admin.py  dummy.json  mongo.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: celery.py  settings.py  urls.py  views.py
backend/backend/templates/: base.html  home.html
backend/backend/templates/registration/: login.html
backend/base/: models.py  views.py
backend/base/migrations/: 0001_initial.py  0002_rename_questionanswerpair_qapair.py  0003_alter_qapair_created.py
backend/logics/agents/candidate/: load_qa.py  save_response.py  transcribe_answer.py  validate_answer.py
backend/logics/agents/recruiter/: ques_ans_gen.py  save_to_db.py
backend/logics/db/: mongo.py
backend/logics/graph/: builder.py  schema.py
backend/logics/llm/: model.py
backend/logics/utils/: env_loader.py  extract.py  tasks.py
graph/: builder.py  schema.py
llm/: model.py  prompts.py
utils/: extract.py  state_factory.py
